// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Rail Component Snapshots matches snapshot with icon props 1`] = `
<DocumentFragment>
  <nav
    class="styles__NavigationRailWrapper-sc-19qc29a-0 gKoTAW"
    data-testid="nav"
    orientation="vertical"
    role="menubar"
  >
    <button
      class="styles__NavigationRailItemWrapper-sc-14vhn73-0 eNWamr"
      tabindex="0"
    >
      <div
        class="styles__ItemLabelBlock-sc-qkri46-4 jVFTOO"
        role="img"
        tabindex="0"
      >
        <div
          class="styles__IconBlock-sc-qkri46-3 jAhlm"
        >
          <svg
            class="fk-icon murv-icons"
            color=""
            height="24px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Home
            </title>
            <path
              d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
            />
          </svg>
        </div>
      </div>
    </button>
    <button
      class="styles__NavigationRailItemWrapper-sc-14vhn73-0 eNWamr"
      tabindex="0"
    >
      <div
        class="styles__ItemLabelBlock-sc-qkri46-4 jVFTOO"
        role="img"
        tabindex="0"
      >
        <div
          class="styles__IconBlock-sc-qkri46-3 jAhlm"
        >
          <svg
            class="fk-icon murv-icons"
            color=""
            height="24px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ShoppingCart
            </title>
            <path
              d="M286.788-81Q257-81 236-102.212q-21-21.213-21-51Q215-183 236.212-204q21.213-21 51-21Q317-225 338-203.788q21 21.213 21 51Q359-123 337.788-102q-21.213 21-51 21Zm400 0Q657-81 636-102.212q-21-21.213-21-51Q615-183 636.212-204q21.213-21 51-21Q717-225 738-203.788q21 21.213 21 51Q759-123 737.788-102q-21.213 21-51 21ZM235-741l110 228h288l125-228H235Zm-30-60h589.074q22.964 0 34.945 21Q841-759 829-738L694-495q-11 19-28.559 30.5Q647.881-453 627-453H324l-56 104h461q12.75 0 21.375 8.675 8.625 8.676 8.625 21.5 0 12.825-8.625 21.325T729-289H277q-42 0-60.5-28t.5-63l64-118-152-322H81q-12.75 0-21.375-8.675Q51-837.351 51-850.175 51-863 59.625-871.5T81-880h68q9 0 16.2 4.435Q172.4-871.13 176-863l29 62Zm140 288h288-288Z"
            />
          </svg>
        </div>
      </div>
    </button>
  </nav>
</DocumentFragment>
`;

exports[`Navigation Rail Component Snapshots matches snapshot with icon props 2`] = `
<DocumentFragment>
  <nav
    class="styles__NavigationRailWrapper-sc-19qc29a-0 gKoTAW"
    data-testid="nav"
    orientation="vertical"
    role="menubar"
  >
    <button
      class="styles__NavigationRailItemWrapper-sc-14vhn73-0 eNWamr"
      tabindex="0"
    >
      <div
        class="styles__ItemLabelBlock-sc-qkri46-4 jVFTOO"
        role="img"
        tabindex="0"
      >
        <div
          class="styles__IconBlock-sc-qkri46-3 jAhlm"
        >
          <svg
            class="fk-icon murv-icons"
            color=""
            height="24px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Home
            </title>
            <path
              d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
            />
          </svg>
        </div>
        <div
          class="styles__RailItemLabel-sc-qkri46-5 kKwZsg"
        >
          Report
        </div>
      </div>
    </button>
    <button
      class="styles__NavigationRailItemWrapper-sc-14vhn73-0 eNWamr"
      tabindex="0"
    >
      <div
        class="styles__ItemLabelBlock-sc-qkri46-4 jVFTOO"
        role="img"
        tabindex="0"
      >
        <div
          class="styles__IconBlock-sc-qkri46-3 jAhlm"
        >
          <svg
            class="fk-icon murv-icons"
            color=""
            height="24px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ShoppingCart
            </title>
            <path
              d="M286.788-81Q257-81 236-102.212q-21-21.213-21-51Q215-183 236.212-204q21.213-21 51-21Q317-225 338-203.788q21 21.213 21 51Q359-123 337.788-102q-21.213 21-51 21Zm400 0Q657-81 636-102.212q-21-21.213-21-51Q615-183 636.212-204q21.213-21 51-21Q717-225 738-203.788q21 21.213 21 51Q759-123 737.788-102q-21.213 21-51 21ZM235-741l110 228h288l125-228H235Zm-30-60h589.074q22.964 0 34.945 21Q841-759 829-738L694-495q-11 19-28.559 30.5Q647.881-453 627-453H324l-56 104h461q12.75 0 21.375 8.675 8.625 8.676 8.625 21.5 0 12.825-8.625 21.325T729-289H277q-42 0-60.5-28t.5-63l64-118-152-322H81q-12.75 0-21.375-8.675Q51-837.351 51-850.175 51-863 59.625-871.5T81-880h68q9 0 16.2 4.435Q172.4-871.13 176-863l29 62Zm140 288h288-288Z"
            />
          </svg>
        </div>
        <div
          class="styles__RailItemLabel-sc-qkri46-5 kKwZsg"
        >
          Growth
        </div>
      </div>
    </button>
  </nav>
</DocumentFragment>
`;

exports[`Navigation Rail Component Snapshots matches snapshot with orientation horizontal 1`] = `
<DocumentFragment>
  <nav
    class="styles__NavigationRailWrapper-sc-19qc29a-0 eSzzWN"
    data-testid="nav"
    orientation="horizontal"
    role="menubar"
  >
    <button
      class="styles__NavigationRailItemWrapper-sc-14vhn73-0 eNWamr"
      tabindex="0"
    >
      <div
        class="styles__ItemLabelBlock-sc-qkri46-4 jVFTOO"
        role="img"
        tabindex="0"
      >
        <div
          class="styles__IconBlock-sc-qkri46-3 jAhlm"
        >
          <svg
            class="fk-icon murv-icons"
            color=""
            height="24px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Home
            </title>
            <path
              d="M220-180h150v-220q0-12.75 8.625-21.375T400-430h160q12.75 0 21.375 8.625T590-400v220h150v-390L480-765 220-570v390Zm-60 0v-390q0-14.25 6.375-27T184-618l260-195q15.68-12 35.84-12Q500-825 516-813l260 195q11.25 8.25 17.625 21T800-570v390q0 24.75-17.625 42.375T740-120H560q-12.75 0-21.375-8.625T530-150v-220H430v220q0 12.75-8.625 21.375T400-120H220q-24.75 0-42.375-17.625T160-180Zm320-293Z"
            />
          </svg>
        </div>
        <div
          class="styles__RailItemLabel-sc-qkri46-5 kKwZsg"
        >
          Report
        </div>
      </div>
    </button>
    <button
      class="styles__NavigationRailItemWrapper-sc-14vhn73-0 eNWamr"
      tabindex="0"
    >
      <div
        class="styles__ItemLabelBlock-sc-qkri46-4 jVFTOO"
        role="img"
        tabindex="0"
      >
        <div
          class="styles__IconBlock-sc-qkri46-3 jAhlm"
        >
          <svg
            class="fk-icon murv-icons"
            color=""
            height="24px"
            style="fill: currentColor; stroke: currentColor;"
            viewBox="0 -960 960 960"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              ShoppingCart
            </title>
            <path
              d="M286.788-81Q257-81 236-102.212q-21-21.213-21-51Q215-183 236.212-204q21.213-21 51-21Q317-225 338-203.788q21 21.213 21 51Q359-123 337.788-102q-21.213 21-51 21Zm400 0Q657-81 636-102.212q-21-21.213-21-51Q615-183 636.212-204q21.213-21 51-21Q717-225 738-203.788q21 21.213 21 51Q759-123 737.788-102q-21.213 21-51 21ZM235-741l110 228h288l125-228H235Zm-30-60h589.074q22.964 0 34.945 21Q841-759 829-738L694-495q-11 19-28.559 30.5Q647.881-453 627-453H324l-56 104h461q12.75 0 21.375 8.675 8.625 8.676 8.625 21.5 0 12.825-8.625 21.325T729-289H277q-42 0-60.5-28t.5-63l64-118-152-322H81q-12.75 0-21.375-8.675Q51-837.351 51-850.175 51-863 59.625-871.5T81-880h68q9 0 16.2 4.435Q172.4-871.13 176-863l29 62Zm140 288h288-288Z"
            />
          </svg>
        </div>
        <div
          class="styles__RailItemLabel-sc-qkri46-5 kKwZsg"
        >
          Growth
        </div>
      </div>
    </button>
  </nav>
</DocumentFragment>
`;
